--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -7,3 +7,7 @@ spring:
     name: config-server
   profiles:
     active: native
+  security:
+    user:
+      name: admin
+      password: $2a$12$Tb6ZxQsE24VFas5Nmaa8Ou6cQahanuBCQHaEnIVx5zUf1NMa2QpwO
