--- a/registry-server/src/main/resources/application.yml
+++ b/registry-server/src/main/resources/application.yml
@@ -1,16 +1,26 @@
 
+eureka:
+  client:
+    register-with-eureka: false  # Registry itself doesn’t register
+    fetch-registry: false
+  server:
+    wait-time-in-ms-when-sync-empty: 0
 
 spring:
   application:
     name: registry-server
   profiles:
     active: dev        # this selects registry-server-dev.yml from Config Server
+  config:
+    import: "optional:configserver:http://localhost:8888"
   cloud:
     config:
-#      uri: http://localhost:8888  # Config Server URL
-      import: config-server:http://localhost:8888
-      import-check:
-        enabled: false
-      username: admin      # Config Server username
-      password: admin   # Config Server password
-      fail-fast: true
+      uri: http://localhost:8888
+      username: admin
+      password: admin
+      fail-fast: false  # Set to true in production
+      retry:
+        initial-interval: 1000
+        max-attempts: 6
+        max-interval: 2000
+        multiplier: 1.1
