--- a/organization-service/src/main/resources/application.yml
+++ b/organization-service/src/main/resources/application.yml
@@ -1,18 +1,8 @@
-
-eureka:
-  client:
-    register-with-eureka: false  # Registry itself doesn’t register
-    fetch-registry: false
-  server:
-    wait-time-in-ms-when-sync-empty: 0
-    enable-self-preservation: false
-    eviction-interval-timer-in-ms: 5000
-    
 spring:
   application:
-    name: registry-server
+    name: organization-service
   profiles:
-    active: dev        # this selects registry-server-dev.yml from Config Server
+      active: dev        # this selects registry-server-dev.yml from Config Server
   config:
     import: "optional:configserver:http://localhost:8888"
   cloud:
