--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.cyber009.sb3m</groupId>
     <artifactId>config-server</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>config-server</name>
     <description>Spring Cloud Config Server for sb3m API</description>
     <url/>
