--- a/gateway-server/pom.xml
+++ b/gateway-server/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.cyber009.sb3m</groupId>
 	<artifactId>gateway-server</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>gateway-server</name>
 	<description>Spring Cloud Registry Server for sb3m API</description>
 	<url/>
