--- a/common-lib/pom.xml
+++ b/common-lib/pom.xml
@@ -10,7 +10,8 @@
 	</parent>
 	<groupId>com.cyber009.sb3m</groupId>
 	<artifactId>common-lib</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
+	<packaging>jar</packaging>
 	<name>common-lib</name>
 	<description>Spring Cloud Common Lib for sb3m API</description>
 	<url/>
@@ -44,16 +45,6 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.amqp</groupId>
-			<artifactId>spring-rabbit-test</artifactId>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -73,6 +64,12 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>repackage</id>
+						<phase>none</phase> <!-- Disable executable repackaging -->
+					</execution>
+				</executions>
 				<configuration>
 					<excludes>
 						<exclude>
