--- a/organization-service/pom.xml
+++ b/organization-service/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.cyber009.sb3m</groupId>
 	<artifactId>organization-service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>organization-service</name>
 	<description>Spring Cloud Organization Service for sb3m API</description>
 	<url/>
@@ -62,6 +62,11 @@
 			<groupId>org.springframework.amqp</groupId>
 			<artifactId>spring-rabbit-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.cyber009.sb3m</groupId>
+			<artifactId>common-lib</artifactId>
+			<version>0.0.1</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
