org-front-service

--- a/config-server/config/gateway-server-dev.yml
+++ b/config-server/config/gateway-server-dev.yml
@@ -5,7 +5,7 @@ spring:
   cloud:
     gateway:
       routes:
-        - id: organization-service
+        - id: organization-front-service
           uri: http://localhost:9102
           predicates:
             - Path=/organizations/**
