--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -76,6 +76,16 @@
       "projectName": "com.cyber009.sb3m-gateway-server",
       "args": "",
       "envFile": "${workspaceFolder}/.env"
+    },
+    {
+      "type": "java",
+      "name": "Spring Boot-OrganizationFrontServiceApplication<organization-front-service>",
+      "request": "launch",
+      "cwd": "${workspaceFolder}",
+      "mainClass": "com.cyber009.sb3m.organization.front.OrganizationFrontServiceApplication",
+      "projectName": "organization-front-service",
+      "args": "",
+      "envFile": "${workspaceFolder}/.env"
     }
   ]
 }
