--- a/organization-back-service/pom.xml
+++ b/organization-back-service/pom.xml
@@ -49,6 +49,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.cyber009.sb3m</groupId>
+			<artifactId>common-lib</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
